# obsidian-networks

./: .env.example  .gitignore  README.md  RESEARCH_MODE_IMPLEMENTATION.md  docker-compose.yml  energy_consumption_sample.csv  worker-seccomp.json
backend/: Dockerfile  database_mongo.py  init_research_db.py  main.py  pyproject.toml  schemas_research.py  sessions.py  tasks.py  tasks_research.py  vectorstore.py
backend/agents/: __init__.py  architect.py  category_registry.py  code_editor.py  code_validator.py  coder.py  core.py  critic.py  evaluator.py  gpu_manager.py  mathematician.py  mutations.py  researcher.py  safety_checker.py  synthetic_data.py  trainer.py  validator.py
backend/agents/domains/: __init__.py  audio.py  base_domain.py  generative.py  graph.py  language.py  multimodal.py  recommendation.py  rl.py  tabular.py  timeseries.py  vision.py
backend/agents/gpu_providers/: __init__.py  lambda_labs.py  local_docker.py  runpod.py
backend/agents/skills/: CONVENTIONS.md  META_SKILL.md
backend/agents/skills/architect/: audio.md  generative.md  graph.md  language.md  multimodal.md  recommendation.md  tabular.md  timeseries.md  vision.md
backend/agents/skills/coder/: audio.md  generative.md  graph.md  language.md  multimodal.md  recommendation.md  rl.md  tabular.md  timeseries.md  vision.md
backend/agents/skills/critic/: scoring.md
backend/agents/skills/evaluator/: metrics.md
backend/agents/skills/mathematician/: novel_mechanisms.md
backend/agents/skills/platform/: audio.md  generative.md  graph.md  rl.md  (+6 more)
backend/routers/: platform.py  research.py
(+33 files in other folders)
